fix: put log out link visible for mobile

--- a/frontend/src/base.css
+++ b/frontend/src/base.css
@@ -7,4 +7,5 @@
 
 :root {
   --primary-color: rgb(29, 155, 240);
+  --light-gray: rgb(83, 100, 113);
 }
