--- a/frontend/src/components/AuthorUsername.css
+++ b/frontend/src/components/AuthorUsername.css
@@ -1,3 +1,3 @@
 .tweet__author-username {
-  color: rgb(83, 100, 113);
+  color: var(--light-gray);  
 }
