--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -7,12 +7,18 @@
   .navbar {
     display: flex;
   }
-}
+  .navbar div {
+    margin-left: 35px;
+  }
 
-.navbar div {
-  margin-left: 35px;
-}
+  .twitter__logo svg {
+    height: 30px;
+  }
 
-.twitter__logo svg {
-  height: 30px;
+  .navbar a {
+    display: block;
+    text-decoration: none;
+    color: black;
+    font-size: 15px;
+  }
 }
